# TheBinder

./: .clang  .gitignore  CMakeLists.txt  README.md  build-js.bat  build-win.bat
.github/workflows/: build-unix.yml  build-windows.yml  build.yml  windows-release.yml
core/: CMakeLists.txt
core/includes/binder/: constants.h  context.h  enviroment.h  expression.h  interpreter.h  parser.h  scanner.h  tokens.h
core/includes/binder/autogen/: astgen.h
core/includes/binder/legacyAST/: interpreter.h  parser.h  scanner.h
core/includes/binder/legacyAST/printer/: basicASTPrinter.h  jsonASTPrinter.h
core/includes/binder/log/: bufferLog.h  consoleLog.h  log.h
core/includes/binder/memory/: hashMap.h  hashing.h  resizableVector.h  sparseMemoryPool.h  stackAllocator.h  stringHashMap.h  stringIntern.h  stringPool.h  threeSizesPool.h
core/includes/binder/printer/: basicASTPrinter.h  jsonASTPrinter.h
core/includes/binder/vm/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  value.h  vm.h
core/src/: context.cpp  interpreter.cpp  main.cpp  parser.cpp  scanner.cpp  tokens.cpp
core/src/autogen/: astgen.cpp
core/src/legacyAST/: context.cpp  interpreter.cpp  parser.cpp  scanner.cpp
core/src/memory/: farmhash.cpp  stringPool.cpp
core/src/vm/: chunk.cpp  compiler.cpp  debug.cpp  object.cpp  value.cpp  vm.cpp
customBuild/: build-js.bat  build-js.sh  build-win.bat  release.md  tests.rdbg
tests/: CMakeLists.txt
tests/src/: basicASTPrinterTests.cpp  catch.h  disassambleTests.cpp  hashMapTests.cpp  interpreterTests.cpp  loggerTests.cpp  main.cpp  parserTests.cpp  resizableVectorTests.cpp  scannerTests.cpp  sparseMemoryPoolTests.cpp  stackAllocatorTests.cpp  stringInternTests.cpp  stringPoolAllocatorTests.cpp  tokenTests.cpp  treeSizesAllocatorTests.cpp
tests/src/vm/: disassambleTests.cpp  vmCompileTests.cpp  vmExecutionTests.cpp  vmScanTests.cpp
tools/emscripten/: CMakeLists.txt  main.cpp  wasm.html
tools/emscripten/web/: wasm.html
tools/emscripten/web/css/: aststyle.css  bodystyle.css
tools/emscripten/web/js/: astbuilder.js  glue.js  irbuilder.js
tools/metacompiler/: main.cpp
